code/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Default_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_Number__c</fullName>
        <externalId>true</externalId>
        <label>Mogli Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mogli Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Message_To_Send__c</fullName>
        <label>SMS Message To Send</label>
        <type>TextArea</type>
    </fields>
</CustomObject>